--- a/moto/ec2/resources/latest_amis/sa-east-1.json
+++ b/moto/ec2/resources/latest_amis/sa-east-1.json
@@ -1,11 +1,27 @@
 [
   {
-    "ami_id": "ami-037a5ad65570b5d77",
-    "architecture": "x86_64",
-    "description": "Amazon Linux AMI 2018.03.0.20221018.0 x86_64 PV ebs",
+    "ami_id": "ami-0a470ce586f0eeb70",
+    "architecture": "arm64",
+    "description": "Amazon Linux 2022 AMI 2022.0.20230118.3 arm64 HVM kernel-5.15",
     "hypervisor": "xen",
     "image_type": "machine",
-    "name": "amzn-ami-pv-2018.03.0.20221018.0-x86_64-ebs",
+    "name": "al2022-ami-2022.0.20230118.3-kernel-5.15-arm64",
+    "owner_id": "137112412989",
+    "platform": null,
+    "public": true,
+    "root_device_name": "/dev/xvda",
+    "root_device_type": "ebs",
+    "sriov": "simple",
+    "state": "available",
+    "virtualization_type": "hvm"
+  },
+  {
+    "ami_id": "ami-0c59b14601cde51d7",
+    "architecture": "x86_64",
+    "description": "Amazon Linux AMI 2018.03.0.20230221.0 x86_64 PV ebs",
+    "hypervisor": "xen",
+    "image_type": "machine",
+    "name": "amzn-ami-pv-2018.03.0.20230221.0-x86_64-ebs",
     "owner_id": "137112412989",
     "platform": null,
     "public": true,
@@ -16,12 +32,12 @@
     "virtualization_type": "paravirtual"
   },
   {
-    "ami_id": "ami-093d714091ce0b0db",
+    "ami_id": "ami-0a32ed8e04d4b1a9a",
     "architecture": "x86_64",
-    "description": "Amazon Linux 2022 AMI 2022.0.20221103.1 x86_64 Minimal HVM kernel-5.15",
+    "description": "Amazon Linux 2023 AMI 2023.0.20230222.1 x86_64 HVM kernel-6.1",
     "hypervisor": "xen",
     "image_type": "machine",
-    "name": "al2022-ami-minimal-2022.0.20221103.1-kernel-5.15-x86_64",
+    "name": "al2023-ami-2023.0.20230222.1-kernel-6.1-x86_64",
     "owner_id": "137112412989",
     "platform": null,
     "public": true,
@@ -32,12 +48,108 @@
     "virtualization_type": "hvm"
   },
   {
-    "ami_id": "ami-0688871fb6d7d5704",
+    "ami_id": "ami-01d7394b0795186bc",
+    "architecture": "x86_64",
+    "description": "Amazon Linux 2 Kernel 5.10 AMI 2.0.20230221.0 x86_64 HVM gp2",
+    "hypervisor": "xen",
+    "image_type": "machine",
+    "name": "amzn2-ami-kernel-5.10-hvm-2.0.20230221.0-x86_64-gp2",
+    "owner_id": "137112412989",
+    "platform": null,
+    "public": true,
+    "root_device_name": "/dev/xvda",
+    "root_device_type": "ebs",
+    "sriov": "simple",
+    "state": "available",
+    "virtualization_type": "hvm"
+  },
+  {
+    "ami_id": "ami-031986ed22dfc4bd8",
+    "architecture": "x86_64",
+    "description": "Amazon Linux 2022 AMI 2022.0.20230118.3 x86_64 HVM kernel-5.15",
+    "hypervisor": "xen",
+    "image_type": "machine",
+    "name": "al2022-ami-2022.0.20230118.3-kernel-5.15-x86_64",
+    "owner_id": "137112412989",
+    "platform": null,
+    "public": true,
+    "root_device_name": "/dev/xvda",
+    "root_device_type": "ebs",
+    "sriov": "simple",
+    "state": "available",
+    "virtualization_type": "hvm"
+  },
+  {
+    "ami_id": "ami-0ff0d8fc81d32c290",
+    "architecture": "x86_64",
+    "description": "Amazon Linux 2023 AMI 2023.0.20230222.1 x86_64 Minimal HVM kernel-6.1",
+    "hypervisor": "xen",
+    "image_type": "machine",
+    "name": "al2023-ami-minimal-2023.0.20230222.1-kernel-6.1-x86_64",
+    "owner_id": "137112412989",
+    "platform": null,
+    "public": true,
+    "root_device_name": "/dev/xvda",
+    "root_device_type": "ebs",
+    "sriov": "simple",
+    "state": "available",
+    "virtualization_type": "hvm"
+  },
+  {
+    "ami_id": "ami-04165c37bdbe4517a",
+    "architecture": "x86_64",
+    "description": "Amazon Linux 2 AMI 2.0.20230221.0 x86_64 Minimal HVM ebs",
+    "hypervisor": "xen",
+    "image_type": "machine",
+    "name": "amzn2-ami-minimal-hvm-2.0.20230221.0-x86_64-ebs",
+    "owner_id": "137112412989",
+    "platform": null,
+    "public": true,
+    "root_device_name": "/dev/xvda",
+    "root_device_type": "ebs",
+    "sriov": "simple",
+    "state": "available",
+    "virtualization_type": "hvm"
+  },
+  {
+    "ami_id": "ami-0499f71263fd3feb7",
+    "architecture": "x86_64",
+    "description": "Amazon Linux 2 Kernel 5.10 AMI 2.0.20230221.0 x86_64 HVM ebs",
+    "hypervisor": "xen",
+    "image_type": "machine",
+    "name": "amzn2-ami-kernel-5.10-hvm-2.0.20230221.0-x86_64-ebs",
+    "owner_id": "137112412989",
+    "platform": null,
+    "public": true,
+    "root_device_name": "/dev/xvda",
+    "root_device_type": "ebs",
+    "sriov": "simple",
+    "state": "available",
+    "virtualization_type": "hvm"
+  },
+  {
+    "ami_id": "ami-0f42e8560f3034255",
+    "architecture": "x86_64",
+    "description": "Amazon Linux 2 AMI 2.0.20230221.0 x86_64 HVM ebs",
+    "hypervisor": "xen",
+    "image_type": "machine",
+    "name": "amzn2-ami-hvm-2.0.20230221.0-x86_64-ebs",
+    "owner_id": "137112412989",
+    "platform": null,
+    "public": true,
+    "root_device_name": "/dev/xvda",
+    "root_device_type": "ebs",
+    "sriov": "simple",
+    "state": "available",
+    "virtualization_type": "hvm"
+  },
+  {
+    "ami_id": "ami-02fb6c3ebe47a499c",
     "architecture": "arm64",
-    "description": "Amazon Linux 2 LTS Arm64 AMI 2.0.20221103.3 arm64 HVM gp2",
+    "description": "Amazon Linux 2023 AMI 2023.0.20230222.1 arm64 Minimal HVM kernel-6.1",
     "hypervisor": "xen",
     "image_type": "machine",
-    "name": "amzn2-ami-hvm-2.0.20221103.3-arm64-gp2",
+    "name": "al2023-ami-minimal-2023.0.20230222.1-kernel-6.1-arm64",
     "owner_id": "137112412989",
     "platform": null,
     "public": true,
@@ -48,44 +160,12 @@
     "virtualization_type": "hvm"
   },
   {
-    "ami_id": "ami-0af622ab31000bc40",
-    "architecture": "x86_64",
-    "description": "Amazon Linux AMI 2018.03.0.20221018.0 x86_64 HVM ebs",
-    "hypervisor": "xen",
-    "image_type": "machine",
-    "name": "amzn-ami-hvm-2018.03.0.20221018.0-x86_64-ebs",
-    "owner_id": "137112412989",
-    "platform": null,
-    "public": true,
-    "root_device_name": "/dev/xvda",
-    "root_device_type": "ebs",
-    "sriov": "simple",
-    "state": "available",
-    "virtualization_type": "hvm"
-  },
-  {
-    "ami_id": "ami-0b7101e993ea27f3a",
-    "architecture": "x86_64",
-    "description": "Amazon Linux 2 Kernel 5.10 AMI 2.0.20221103.3 x86_64 HVM gp2",
-    "hypervisor": "xen",
-    "image_type": "machine",
-    "name": "amzn2-ami-kernel-5.10-hvm-2.0.20221103.3-x86_64-gp2",
-    "owner_id": "137112412989",
-    "platform": null,
-    "public": true,
-    "root_device_name": "/dev/xvda",
-    "root_device_type": "ebs",
-    "sriov": "simple",
-    "state": "available",
-    "virtualization_type": "hvm"
-  },
-  {
-    "ami_id": "ami-0fb7b417f44075c95",
+    "ami_id": "ami-03b8526470c59c43c",
     "architecture": "arm64",
-    "description": "Amazon Linux 2 LTS Arm64 AMI 2.0.20221103.3 arm64 Minimal HVM ebs",
+    "description": "Amazon Linux 2 LTS Arm64 AMI 2.0.20230221.0 arm64 Minimal HVM ebs",
     "hypervisor": "xen",
     "image_type": "machine",
-    "name": "amzn2-ami-minimal-hvm-2.0.20221103.3-arm64-ebs",
+    "name": "amzn2-ami-minimal-hvm-2.0.20230221.0-arm64-ebs",
     "owner_id": "137112412989",
     "platform": null,
     "public": true,
@@ -96,12 +176,28 @@
     "virtualization_type": "hvm"
   },
   {
-    "ami_id": "ami-011f0f476acec9b0f",
+    "ami_id": "ami-06bee0fc7954e075a",
+    "architecture": "x86_64",
+    "description": "Amazon Linux AMI 2018.03.0.20230221.0 x86_64 Minimal HVM ebs",
+    "hypervisor": "xen",
+    "image_type": "machine",
+    "name": "amzn-ami-minimal-hvm-2018.03.0.20230221.0-x86_64-ebs",
+    "owner_id": "137112412989",
+    "platform": null,
+    "public": true,
+    "root_device_name": "/dev/xvda",
+    "root_device_type": "ebs",
+    "sriov": "simple",
+    "state": "available",
+    "virtualization_type": "hvm"
+  },
+  {
+    "ami_id": "ami-0b160db4bf70fd426",
     "architecture": "arm64",
-    "description": "Amazon Linux 2022 AMI 2022.0.20221103.1 arm64 Minimal HVM kernel-5.15",
+    "description": "Amazon Linux 2 LTS Arm64 AMI 2.0.20230221.0 arm64 HVM gp2",
     "hypervisor": "xen",
     "image_type": "machine",
-    "name": "al2022-ami-minimal-2022.0.20221103.1-kernel-5.15-arm64",
+    "name": "amzn2-ami-hvm-2.0.20230221.0-arm64-gp2",
     "owner_id": "137112412989",
     "platform": null,
     "public": true,
@@ -112,12 +208,12 @@
     "virtualization_type": "hvm"
   },
   {
-    "ami_id": "ami-06edd763bf1d6dbf8",
+    "ami_id": "ami-0b9de9b3cc811697d",
     "architecture": "arm64",
-    "description": "Amazon Linux 2022 AMI 2022.0.20221103.1 arm64 HVM kernel-5.15",
+    "description": "Amazon Linux 2022 AMI 2022.0.20230118.3 arm64 Minimal HVM kernel-5.15",
     "hypervisor": "xen",
     "image_type": "machine",
-    "name": "al2022-ami-2022.0.20221103.1-kernel-5.15-arm64",
+    "name": "al2022-ami-minimal-2022.0.20230118.3-kernel-5.15-arm64",
     "owner_id": "137112412989",
     "platform": null,
     "public": true,
@@ -128,12 +224,12 @@
     "virtualization_type": "hvm"
   },
   {
-    "ami_id": "ami-0a5b171fce802079a",
+    "ami_id": "ami-0dd060d2c88e19f6b",
     "architecture": "x86_64",
-    "description": "Amazon Linux 2 Kernel 5.10 AMI 2.0.20221103.3 x86_64 HVM ebs",
+    "description": "Amazon Linux 2022 AMI 2022.0.20230118.3 x86_64 Minimal HVM kernel-5.15",
     "hypervisor": "xen",
     "image_type": "machine",
-    "name": "amzn2-ami-kernel-5.10-hvm-2.0.20221103.3-x86_64-ebs",
+    "name": "al2022-ami-minimal-2022.0.20230118.3-kernel-5.15-x86_64",
     "owner_id": "137112412989",
     "platform": null,
     "public": true,
@@ -144,12 +240,12 @@
     "virtualization_type": "hvm"
   },
   {
-    "ami_id": "ami-040ffd031f9ee6af5",
+    "ami_id": "ami-071f6579c820618e2",
     "architecture": "x86_64",
-    "description": "Amazon Linux 2 AMI 2.0.20221103.3 x86_64 HVM ebs",
+    "description": "Amazon Linux AMI 2018.03.0.20230221.0 x86_64 HVM ebs",
     "hypervisor": "xen",
     "image_type": "machine",
-    "name": "amzn2-ami-hvm-2.0.20221103.3-x86_64-ebs",
+    "name": "amzn-ami-hvm-2018.03.0.20230221.0-x86_64-ebs",
     "owner_id": "137112412989",
     "platform": null,
     "public": true,
@@ -160,12 +256,12 @@
     "virtualization_type": "hvm"
   },
   {
-    "ami_id": "ami-08d96f6ebfff61293",
-    "architecture": "x86_64",
-    "description": "Amazon Linux 2022 AMI 2022.0.20221103.1 x86_64 HVM kernel-5.15",
+    "ami_id": "ami-0c0e1cc858595b4cb",
+    "architecture": "arm64",
+    "description": "Amazon Linux 2023 AMI 2023.0.20230222.1 arm64 HVM kernel-6.1",
     "hypervisor": "xen",
     "image_type": "machine",
-    "name": "al2022-ami-2022.0.20221103.1-kernel-5.15-x86_64",
+    "name": "al2023-ami-2023.0.20230222.1-kernel-6.1-arm64",
     "owner_id": "137112412989",
     "platform": null,
     "public": true,
@@ -176,28 +272,12 @@
     "virtualization_type": "hvm"
   },
   {
-    "ami_id": "ami-00684166998825a53",
+    "ami_id": "ami-054b610df07a01b41",
     "architecture": "x86_64",
-    "description": "Amazon Linux AMI 2018.03.0.20221018.0 x86_64 HVM gp2",
+    "description": "Amazon Linux AMI 2018.03.0.20230221.0 x86_64 Minimal PV ebs",
     "hypervisor": "xen",
     "image_type": "machine",
-    "name": "amzn-ami-hvm-2018.03.0.20221018.0-x86_64-gp2",
-    "owner_id": "137112412989",
-    "platform": null,
-    "public": true,
-    "root_device_name": "/dev/xvda",
-    "root_device_type": "ebs",
-    "sriov": "simple",
-    "state": "available",
-    "virtualization_type": "hvm"
-  },
-  {
-    "ami_id": "ami-0fe1dd4af0e464bda",
-    "architecture": "x86_64",
-    "description": "Amazon Linux AMI 2018.03.0.20221018.0 x86_64 Minimal PV ebs",
-    "hypervisor": "xen",
-    "image_type": "machine",
-    "name": "amzn-ami-minimal-pv-2018.03.0.20221018.0-x86_64-ebs",
+    "name": "amzn-ami-minimal-pv-2018.03.0.20230221.0-x86_64-ebs",
     "owner_id": "137112412989",
     "platform": null,
     "public": true,
@@ -208,12 +288,12 @@
     "virtualization_type": "paravirtual"
   },
   {
-    "ami_id": "ami-0886a3d2c8b721217",
+    "ami_id": "ami-049da537cd7dc9f69",
     "architecture": "x86_64",
-    "description": "Amazon Linux 2 AMI 2.0.20221103.3 x86_64 HVM gp2",
+    "description": "Amazon Linux 2 AMI 2.0.20230221.0 x86_64 HVM gp2",
     "hypervisor": "xen",
     "image_type": "machine",
-    "name": "amzn2-ami-hvm-2.0.20221103.3-x86_64-gp2",
+    "name": "amzn2-ami-hvm-2.0.20230221.0-x86_64-gp2",
     "owner_id": "137112412989",
     "platform": null,
     "public": true,
@@ -224,44 +304,28 @@
     "virtualization_type": "hvm"
   },
   {
-    "ami_id": "ami-093e0c0eaca81c8ff",
-    "architecture": "x86_64",
-    "description": "Amazon Linux AMI 2018.03.0.20221018.0 x86_64 Minimal HVM ebs",
-    "hypervisor": "xen",
-    "image_type": "machine",
-    "name": "amzn-ami-minimal-hvm-2018.03.0.20221018.0-x86_64-ebs",
-    "owner_id": "137112412989",
-    "platform": null,
-    "public": true,
-    "root_device_name": "/dev/xvda",
-    "root_device_type": "ebs",
-    "sriov": "simple",
-    "state": "available",
-    "virtualization_type": "hvm"
-  },
-  {
-    "ami_id": "ami-04d4abf1a06415e91",
-    "architecture": "x86_64",
-    "description": "Amazon Linux 2 AMI 2.0.20221103.3 x86_64 Minimal HVM ebs",
-    "hypervisor": "xen",
-    "image_type": "machine",
-    "name": "amzn2-ami-minimal-hvm-2.0.20221103.3-x86_64-ebs",
-    "owner_id": "137112412989",
-    "platform": null,
-    "public": true,
-    "root_device_name": "/dev/xvda",
-    "root_device_type": "ebs",
-    "sriov": "simple",
-    "state": "available",
-    "virtualization_type": "hvm"
-  },
-  {
-    "ami_id": "ami-0c6d634b7a03b447f",
+    "ami_id": "ami-028646569b1090061",
     "architecture": "arm64",
-    "description": "Amazon Linux 2 LTS Arm64 Kernel 5.10 AMI 2.0.20221103.3 arm64 HVM gp2",
+    "description": "Amazon Linux 2 LTS Arm64 Kernel 5.10 AMI 2.0.20230221.0 arm64 HVM gp2",
     "hypervisor": "xen",
     "image_type": "machine",
-    "name": "amzn2-ami-kernel-5.10-hvm-2.0.20221103.3-arm64-gp2",
+    "name": "amzn2-ami-kernel-5.10-hvm-2.0.20230221.0-arm64-gp2",
+    "owner_id": "137112412989",
+    "platform": null,
+    "public": true,
+    "root_device_name": "/dev/xvda",
+    "root_device_type": "ebs",
+    "sriov": "simple",
+    "state": "available",
+    "virtualization_type": "hvm"
+  },
+  {
+    "ami_id": "ami-0540ae8946da09934",
+    "architecture": "x86_64",
+    "description": "Amazon Linux AMI 2018.03.0.20230221.0 x86_64 HVM gp2",
+    "hypervisor": "xen",
+    "image_type": "machine",
+    "name": "amzn-ami-hvm-2018.03.0.20230221.0-x86_64-gp2",
     "owner_id": "137112412989",
     "platform": null,
     "public": true,
