chore: update SSM default AMI's

--- a/moto/ec2/resources/latest_amis/us-east-2.json
+++ b/moto/ec2/resources/latest_amis/us-east-2.json
@@ -1,11 +1,27 @@
 [
   {
-    "ami_id": "ami-096f800f266c64d2c",
+    "ami_id": "ami-099568a19066f22ee",
+    "architecture": "x86_64",
+    "description": "Amazon Linux AMI 2018.03.0.20230221.0 x86_64 HVM ebs",
+    "hypervisor": "xen",
+    "image_type": "machine",
+    "name": "amzn-ami-hvm-2018.03.0.20230221.0-x86_64-ebs",
+    "owner_id": "137112412989",
+    "platform": null,
+    "public": true,
+    "root_device_name": "/dev/xvda",
+    "root_device_type": "ebs",
+    "sriov": "simple",
+    "state": "available",
+    "virtualization_type": "hvm"
+  },
+  {
+    "ami_id": "ami-0a2a2db3e90ba5234",
     "architecture": "arm64",
-    "description": "Amazon Linux 2 LTS Arm64 AMI 2.0.20221103.3 arm64 Minimal HVM ebs",
+    "description": "Amazon Linux 2 LTS Arm64 AMI 2.0.20230221.0 arm64 HVM gp2",
     "hypervisor": "xen",
     "image_type": "machine",
-    "name": "amzn2-ami-minimal-hvm-2.0.20221103.3-arm64-ebs",
+    "name": "amzn2-ami-hvm-2.0.20230221.0-arm64-gp2",
     "owner_id": "137112412989",
     "platform": null,
     "public": true,
@@ -16,12 +32,12 @@
     "virtualization_type": "hvm"
   },
   {
-    "ami_id": "ami-039d0ac59ef496d58",
+    "ami_id": "ami-0b7cf4f3de1a7ea4d",
     "architecture": "x86_64",
-    "description": "Amazon Linux 2 AMI 2.0.20221103.3 x86_64 Minimal HVM ebs",
+    "description": "Amazon Linux 2 Kernel 5.10 AMI 2.0.20230221.0 x86_64 HVM ebs",
     "hypervisor": "xen",
     "image_type": "machine",
-    "name": "amzn2-ami-minimal-hvm-2.0.20221103.3-x86_64-ebs",
+    "name": "amzn2-ami-kernel-5.10-hvm-2.0.20230221.0-x86_64-ebs",
     "owner_id": "137112412989",
     "platform": null,
     "public": true,
@@ -32,12 +48,60 @@
     "virtualization_type": "hvm"
   },
   {
-    "ami_id": "ami-0bd66d90cb89ff3f5",
+    "ami_id": "ami-0fdea51de1a05688e",
+    "architecture": "x86_64",
+    "description": "Amazon Linux AMI 2018.03.0.20230221.0 x86_64 HVM gp2",
+    "hypervisor": "xen",
+    "image_type": "machine",
+    "name": "amzn-ami-hvm-2018.03.0.20230221.0-x86_64-gp2",
+    "owner_id": "137112412989",
+    "platform": null,
+    "public": true,
+    "root_device_name": "/dev/xvda",
+    "root_device_type": "ebs",
+    "sriov": "simple",
+    "state": "available",
+    "virtualization_type": "hvm"
+  },
+  {
+    "ami_id": "ami-0bacfa82b63bd65f6",
+    "architecture": "x86_64",
+    "description": "Amazon Linux 2 AMI 2.0.20230221.0 x86_64 Minimal HVM ebs",
+    "hypervisor": "xen",
+    "image_type": "machine",
+    "name": "amzn2-ami-minimal-hvm-2.0.20230221.0-x86_64-ebs",
+    "owner_id": "137112412989",
+    "platform": null,
+    "public": true,
+    "root_device_name": "/dev/xvda",
+    "root_device_type": "ebs",
+    "sriov": "simple",
+    "state": "available",
+    "virtualization_type": "hvm"
+  },
+  {
+    "ami_id": "ami-022ce17402027c8f0",
+    "architecture": "x86_64",
+    "description": "Amazon Linux 2023 AMI 2023.0.20230222.1 x86_64 HVM kernel-6.1",
+    "hypervisor": "xen",
+    "image_type": "machine",
+    "name": "al2023-ami-2023.0.20230222.1-kernel-6.1-x86_64",
+    "owner_id": "137112412989",
+    "platform": null,
+    "public": true,
+    "root_device_name": "/dev/xvda",
+    "root_device_type": "ebs",
+    "sriov": "simple",
+    "state": "available",
+    "virtualization_type": "hvm"
+  },
+  {
+    "ami_id": "ami-0099931d327b178c2",
     "architecture": "arm64",
-    "description": "Amazon Linux 2 LTS Arm64 AMI 2.0.20221103.3 arm64 HVM gp2",
+    "description": "Amazon Linux 2022 AMI 2022.0.20230118.3 arm64 HVM kernel-5.15",
     "hypervisor": "xen",
     "image_type": "machine",
-    "name": "amzn2-ami-hvm-2.0.20221103.3-arm64-gp2",
+    "name": "al2022-ami-2022.0.20230118.3-kernel-5.15-arm64",
     "owner_id": "137112412989",
     "platform": null,
     "public": true,
@@ -48,12 +112,12 @@
     "virtualization_type": "hvm"
   },
   {
-    "ami_id": "ami-0e0fe7b4e5db58dd4",
+    "ami_id": "ami-0cccab8631c5cfc01",
     "architecture": "x86_64",
-    "description": "Amazon Linux AMI 2018.03.0.20221018.0 x86_64 Minimal HVM ebs",
+    "description": "Amazon Linux 2022 AMI 2022.0.20230118.3 x86_64 Minimal HVM kernel-5.15",
     "hypervisor": "xen",
     "image_type": "machine",
-    "name": "amzn-ami-minimal-hvm-2018.03.0.20221018.0-x86_64-ebs",
+    "name": "al2022-ami-minimal-2022.0.20230118.3-kernel-5.15-x86_64",
     "owner_id": "137112412989",
     "platform": null,
     "public": true,
@@ -64,12 +128,12 @@
     "virtualization_type": "hvm"
   },
   {
-    "ami_id": "ami-05fa6c5e30bfc13a4",
+    "ami_id": "ami-0ee3fd65d2a6d09f0",
     "architecture": "x86_64",
-    "description": "Amazon Linux 2 Kernel 5.10 AMI 2.0.20221103.3 x86_64 HVM ebs",
+    "description": "Amazon Linux 2022 AMI 2022.0.20230118.3 x86_64 HVM kernel-5.15",
     "hypervisor": "xen",
     "image_type": "machine",
-    "name": "amzn2-ami-kernel-5.10-hvm-2.0.20221103.3-x86_64-ebs",
+    "name": "al2022-ami-2022.0.20230118.3-kernel-5.15-x86_64",
     "owner_id": "137112412989",
     "platform": null,
     "public": true,
@@ -80,12 +144,12 @@
     "virtualization_type": "hvm"
   },
   {
-    "ami_id": "ami-0f91cedb707b09db0",
+    "ami_id": "ami-090e933d66e7acf29",
     "architecture": "arm64",
-    "description": "Amazon Linux 2 LTS Arm64 Kernel 5.10 AMI 2.0.20221103.3 arm64 HVM gp2",
+    "description": "Amazon Linux 2 LTS Arm64 AMI 2.0.20230221.0 arm64 Minimal HVM ebs",
     "hypervisor": "xen",
     "image_type": "machine",
-    "name": "amzn2-ami-kernel-5.10-hvm-2.0.20221103.3-arm64-gp2",
+    "name": "amzn2-ami-minimal-hvm-2.0.20230221.0-arm64-ebs",
     "owner_id": "137112412989",
     "platform": null,
     "public": true,
@@ -96,12 +160,12 @@
     "virtualization_type": "hvm"
   },
   {
-    "ami_id": "ami-0f8dd34f942f72088",
+    "ami_id": "ami-0bf79e4ef6785d43d",
     "architecture": "x86_64",
-    "description": "Amazon Linux AMI 2018.03.0.20221018.0 x86_64 HVM ebs",
+    "description": "Amazon Linux 2023 AMI 2023.0.20230222.1 x86_64 Minimal HVM kernel-6.1",
     "hypervisor": "xen",
     "image_type": "machine",
-    "name": "amzn-ami-hvm-2018.03.0.20221018.0-x86_64-ebs",
+    "name": "al2023-ami-minimal-2023.0.20230222.1-kernel-6.1-x86_64",
     "owner_id": "137112412989",
     "platform": null,
     "public": true,
@@ -112,12 +176,12 @@
     "virtualization_type": "hvm"
   },
   {
-    "ami_id": "ami-0beaa649c482330f7",
+    "ami_id": "ami-0a9cc98950c413beb",
     "architecture": "x86_64",
-    "description": "Amazon Linux 2 Kernel 5.10 AMI 2.0.20221103.3 x86_64 HVM gp2",
+    "description": "Amazon Linux 2 AMI 2.0.20230221.0 x86_64 HVM ebs",
     "hypervisor": "xen",
     "image_type": "machine",
-    "name": "amzn2-ami-kernel-5.10-hvm-2.0.20221103.3-x86_64-gp2",
+    "name": "amzn2-ami-hvm-2.0.20230221.0-x86_64-ebs",
     "owner_id": "137112412989",
     "platform": null,
     "public": true,
@@ -128,12 +192,12 @@
     "virtualization_type": "hvm"
   },
   {
-    "ami_id": "ami-02498540f7dab49b5",
+    "ami_id": "ami-0f3c9c466bb525749",
     "architecture": "x86_64",
-    "description": "Amazon Linux 2022 AMI 2022.0.20221103.1 x86_64 Minimal HVM kernel-5.15",
+    "description": "Amazon Linux 2 Kernel 5.10 AMI 2.0.20230221.0 x86_64 HVM gp2",
     "hypervisor": "xen",
     "image_type": "machine",
-    "name": "al2022-ami-minimal-2022.0.20221103.1-kernel-5.15-x86_64",
+    "name": "amzn2-ami-kernel-5.10-hvm-2.0.20230221.0-x86_64-gp2",
     "owner_id": "137112412989",
     "platform": null,
     "public": true,
@@ -144,44 +208,12 @@
     "virtualization_type": "hvm"
   },
   {
-    "ami_id": "ami-0bd2d1241422f1795",
-    "architecture": "x86_64",
-    "description": "Amazon Linux 2022 AMI 2022.0.20221103.1 x86_64 HVM kernel-5.15",
-    "hypervisor": "xen",
-    "image_type": "machine",
-    "name": "al2022-ami-2022.0.20221103.1-kernel-5.15-x86_64",
-    "owner_id": "137112412989",
-    "platform": null,
-    "public": true,
-    "root_device_name": "/dev/xvda",
-    "root_device_type": "ebs",
-    "sriov": "simple",
-    "state": "available",
-    "virtualization_type": "hvm"
-  },
-  {
-    "ami_id": "ami-0acebd5bfe2834dc3",
-    "architecture": "x86_64",
-    "description": "Amazon Linux AMI 2018.03.0.20221018.0 x86_64 HVM gp2",
-    "hypervisor": "xen",
-    "image_type": "machine",
-    "name": "amzn-ami-hvm-2018.03.0.20221018.0-x86_64-gp2",
-    "owner_id": "137112412989",
-    "platform": null,
-    "public": true,
-    "root_device_name": "/dev/xvda",
-    "root_device_type": "ebs",
-    "sriov": "simple",
-    "state": "available",
-    "virtualization_type": "hvm"
-  },
-  {
-    "ami_id": "ami-0fad086c5f1202c13",
+    "ami_id": "ami-0bd45a47b93f98001",
     "architecture": "arm64",
-    "description": "Amazon Linux 2022 AMI 2022.0.20221103.1 arm64 HVM kernel-5.15",
+    "description": "Amazon Linux 2022 AMI 2022.0.20230118.3 arm64 Minimal HVM kernel-5.15",
     "hypervisor": "xen",
     "image_type": "machine",
-    "name": "al2022-ami-2022.0.20221103.1-kernel-5.15-arm64",
+    "name": "al2022-ami-minimal-2022.0.20230118.3-kernel-5.15-arm64",
     "owner_id": "137112412989",
     "platform": null,
     "public": true,
@@ -192,12 +224,12 @@
     "virtualization_type": "hvm"
   },
   {
-    "ami_id": "ami-0185a6f76b69a1870",
+    "ami_id": "ami-0045d7f5f53e95e91",
     "architecture": "x86_64",
-    "description": "Amazon Linux 2 AMI 2.0.20221103.3 x86_64 HVM gp2",
+    "description": "Amazon Linux AMI 2018.03.0.20230221.0 x86_64 Minimal HVM ebs",
     "hypervisor": "xen",
     "image_type": "machine",
-    "name": "amzn2-ami-hvm-2.0.20221103.3-x86_64-gp2",
+    "name": "amzn-ami-minimal-hvm-2018.03.0.20230221.0-x86_64-ebs",
     "owner_id": "137112412989",
     "platform": null,
     "public": true,
@@ -208,12 +240,28 @@
     "virtualization_type": "hvm"
   },
   {
-    "ami_id": "ami-0ddb6ece4c9d2d3a0",
+    "ami_id": "ami-00d883a1ee0640758",
+    "architecture": "x86_64",
+    "description": "Amazon Linux 2 AMI 2.0.20230221.0 x86_64 HVM gp2",
+    "hypervisor": "xen",
+    "image_type": "machine",
+    "name": "amzn2-ami-hvm-2.0.20230221.0-x86_64-gp2",
+    "owner_id": "137112412989",
+    "platform": null,
+    "public": true,
+    "root_device_name": "/dev/xvda",
+    "root_device_type": "ebs",
+    "sriov": "simple",
+    "state": "available",
+    "virtualization_type": "hvm"
+  },
+  {
+    "ami_id": "ami-02f9b41a7af31dded",
     "architecture": "arm64",
-    "description": "Amazon Linux 2022 AMI 2022.0.20221103.1 arm64 Minimal HVM kernel-5.15",
+    "description": "Amazon Linux 2023 AMI 2023.0.20230222.1 arm64 HVM kernel-6.1",
     "hypervisor": "xen",
     "image_type": "machine",
-    "name": "al2022-ami-minimal-2022.0.20221103.1-kernel-5.15-arm64",
+    "name": "al2023-ami-2023.0.20230222.1-kernel-6.1-arm64",
     "owner_id": "137112412989",
     "platform": null,
     "public": true,
@@ -224,12 +272,28 @@
     "virtualization_type": "hvm"
   },
   {
-    "ami_id": "ami-0fb60a39693356bdc",
-    "architecture": "x86_64",
-    "description": "Amazon Linux 2 AMI 2.0.20221103.3 x86_64 HVM ebs",
+    "ami_id": "ami-022b0a5a9e7053fb8",
+    "architecture": "arm64",
+    "description": "Amazon Linux 2023 AMI 2023.0.20230222.1 arm64 Minimal HVM kernel-6.1",
     "hypervisor": "xen",
     "image_type": "machine",
-    "name": "amzn2-ami-hvm-2.0.20221103.3-x86_64-ebs",
+    "name": "al2023-ami-minimal-2023.0.20230222.1-kernel-6.1-arm64",
+    "owner_id": "137112412989",
+    "platform": null,
+    "public": true,
+    "root_device_name": "/dev/xvda",
+    "root_device_type": "ebs",
+    "sriov": "simple",
+    "state": "available",
+    "virtualization_type": "hvm"
+  },
+  {
+    "ami_id": "ami-096399de9992e2419",
+    "architecture": "arm64",
+    "description": "Amazon Linux 2 LTS Arm64 Kernel 5.10 AMI 2.0.20230221.0 arm64 HVM gp2",
+    "hypervisor": "xen",
+    "image_type": "machine",
+    "name": "amzn2-ami-kernel-5.10-hvm-2.0.20230221.0-arm64-gp2",
     "owner_id": "137112412989",
     "platform": null,
     "public": true,
